Extend `ImmutableMapRules` Refaster rule collection
Resolves #1223.